0027256: Visualization, Path Tracing - add support of alpha-channel of texture

Regenerate resource files.